# Projet-Factorisation

./: .gitignore  CMakeLists.txt  Makefile  README.md
repport/: repport.tex
src/: buffer.c  buffer.h  consommateur.c  consommateur.h  factorisation.c  factorisation.h  main.c  producteur.c  producteur.h  test_factorisation.c
src/main/: consommateur.h  factorisation.c  factorisation.h
src/test/: test_factorisation.c
